# go-infinity

./: .bazeliskrc  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  go.mod  go.sum
example/: BUILD.bazel  main.go  schema.go  test_data.go
rest/: BUILD.bazel  client.go  client_config.go  client_request.go  client_response.go  client_util.go  req_fdb.go  req_fields.go  req_index.go  req_interface.go  req_namespace.go  req_object.go  req_query.go  req_schema.go  req_server.go  req_tool.go  req_transaction.go
rest/fdb/: BUILD.bazel  fdb.go
rest/flags/: BUILD.bazel  const.go
rest/index/: BUILD.bazel  flags.go  index_add.go  index_delete.go
rest/object/: BUILD.bazel  flags.go  object_add.go  object_delete.go  object_get.go  object_update.go
rest/query/: BUILD.bazel  query.go  test.go
rest/schema/: BUILD.bazel  addNewReqRes.sh  add_schema.go  anewReqRes.sh  class_schema_delete.go  class_schema_get.go  class_schema_update.go  flags.go  get_schema.go  name_space_get.go  name_space_get_all.go  namespace.go  retrieve_schema.go  schema.go  schema_add.go  schema_get.go  schema_update.go  update_schema.go
rest/server/: BUILD.bazel  resources.go  shutdown.go  uptime.go
rest/tool/: BUILD.bazel  addNewReqRes.sh  flags.go  tool_get.go  tool_run.go
rest/transaction/: BUILD.bazel  transaction.go
rest_test/: BUILD.bazel  client_test.go  fdb_test.go  flags_test.go  resources_test.go  server_test.go  uptime_test.go
rest_test/server/: BUILD.bazel  client_test.go  resources_test.go  uptime_test.go
rest_test/shutdown/: BUILD.bazel  server_shutodown_test.go
scripts/bash_shared/: convert_functions.sh  rename_functions.sh
scripts/infinite/: inf_new_kb.sh  inf_start_rest_api.sh  notes.txt  restApiConfig.xml
test/: BUILD.bazel  constants.go  fdb_test.go  schema_test.go  server_test.go
test/fdb/: BUILD.bazel  fdb_test.go
test/fixme/: BUILD.bazel  fixme_tests.go  fixme_tx.go  flags.go
test/index/: BUILD.bazel  field.go  index_test.go  myIndexFile.txt  not-implemented.txt
test/namespace/: BUILD.bazel  namespace_test.go
test/object/: BUILD.bazel  object_test.go
test/query/: BUILD.bazel  query_test.go
test/schema/: BUILD.bazel  class_schema_test.go  namespace_test.go  schema_test.go
test/server/: BUILD.bazel  server_test.go
test/shared/: BUILD.bazel  object_test_data.go  schema_big.go  schema_small.go
test/tool/: BUILD.bazel  field.go  tool_test.go
test/transaction/: BUILD.bazel  flags.go  transaction_test.go
