load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "build",
    srcs = [
        ":rest",
        "//rest/fdb",
        "//rest/flags",
        "//rest/server",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "rest",
    srcs = [
        "client.go",
        "client_config.go",
        "client_request.go",
        "client_response.go",
        "client_util.go",
        "errors.go",
        "req_fdb.go",
        "req_interface.go",
        "req_namespace.go",
        "req_object.go",
        "req_schema.go",
        "req_server.go",
    ],
    importpath = "go-infinity/rest",
    visibility = ["//visibility:public"],
    deps = [
        "//rest/fdb",
        "//rest/object",
        "//rest/schema",
        "//rest/server",
        "@com_github_json_iterator_go//:go",
        "@com_github_valyala_fasthttp//:fasthttp",
    ],
)
