load("@io_bazel_rules_go//go:def.bzl", "go_library")

filegroup(
    name = "build",
    srcs = [
        ":rest",
        "//rest/fdb",
        "//rest/flags",
        "//rest/server",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "rest",
    srcs = [
        "client.go",
        "client_config.go",
        "client_request.go",
        "client_response.go",
        "client_util.go",
        "errors.go",
        "req_fdb.go",
        "req_index.go",
        "req_interface.go",
        "req_namespace.go",
        "req_object.go",
        "req_query.go",
        "req_schema.go",
        "req_server.go",
        "req_tool.go",
        "req_transaction.go",
    ],
    importpath = "go-infinity/rest",
    visibility = ["//visibility:public"],
    deps = [
        "//rest/fdb",
        "//rest/index",
        "//rest/object",
        "//rest/query",
        "//rest/schema",
        "//rest/server",
        "//rest/transaction",
        "@com_github_json_iterator_go//:go",
        "@com_github_valyala_fasthttp//:fasthttp",
    ],
)
