load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "object",
    srcs = [
        "add_object.go",
        "delete_object.go",
        "get_object.go",
        "update_object.go",
    ],
    importpath = "go-infinity/rest/object",
    visibility = ["//visibility:public"],
)
