load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "object",
    srcs = [
        "flags.go",
        "object_add.go",
        "object_delete.go",
        "object_get.go",
        "object_update.go",
    ],
    importpath = "go-infinity/rest/object",
    visibility = ["//visibility:public"],
    deps = ["//rest/flags"],
)
