load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "schema",
    srcs = [
        "class_schema_delete.go",
        "class_schema_get.go",
        "class_schema_update.go",
        "fields.go",
        "get_all_name_spaces.go",
        "get_name_space.go",
        "schema.go",
        "schema_add.go",
        "schema_get.go",
        "schema_update.go",
    ],
    importpath = "go-infinity/rest/schema",
    visibility = ["//visibility:public"],
    deps = ["//rest/flags"],
)
