load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "schema",
    srcs = [
        "class_schema_delete.go",
        "class_schema_get.go",
        "class_schema_update.go",
        "flags.go",
        "name_space_get.go",
        "name_space_get_all.go",
        "namespace.go",
        "schema.go",
        "schema_add.go",
        "schema_get.go",
        "schema_update.go",
    ],
    importpath = "go-infinity/rest/schema",
    visibility = ["//visibility:public"],
    deps = ["//rest/flags"],
)
