load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "server_test",
    srcs = [
        "client_test.go",
        "resources_test.go",
        "uptime_test.go",
    ],
    deps = [
        "//rest",
        "//rest/server",
        "@com_github_stretchr_testify//assert",
    ],
)
