load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "index_test",
    srcs = ["index_test.go"],
    embed = [":index"],
    deps = [
        "//rest",
        "//rest/index",
        "//test/shared",
        "@com_github_stretchr_testify//assert",
    ],
)

go_library(
    name = "index",
    srcs = ["field.go"],
    importpath = "go-infinity/test/index",
    visibility = ["//visibility:public"],
)
