load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "tool_test",
    srcs = ["tool_test.go"],
    embed = [":tool"],
    deps = [
        "//rest",
        "//rest/tool",
        "//test/shared",
        "@com_github_stretchr_testify//assert",
    ],
)

go_library(
    name = "tool",
    srcs = ["field.go"],
    importpath = "go-infinity/test/tool",
    visibility = ["//visibility:public"],
)
