load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "transaction_test",
    srcs = ["transaction_test.go"],
    embed = [":transaction"],
    deps = [
        "//rest",
        "//rest/transaction",
        "//test/shared",
        "@com_github_stretchr_testify//assert",
    ],
)

go_library(
    name = "transaction",
    srcs = ["flags.go"],
    importpath = "go-infinity/test/transaction",
    visibility = ["//visibility:public"],
)
